2005-03-12 21:26  antirez

	* ChangeLog, jim.c, jim.h: Added the ability to compile with
	  -DJIM_ANSIC to use only ANSI-C features and libraries.

2005-03-12 10:18  antirez

	* ChangeLog, jim.c, jim.h: Added the Jim_FreeNewObj() macro to free
	  objects with refcount == 0 instead to call Jim_IncrRefCount +
	  Jim_DecrRefCount(), or directly Jim_FreeObj(). Code modified
	  accordingly where needed.  Make test + valgrind test passed after
	  the change.

2005-03-12 09:52  antirez

	* ChangeLog, README, jim.c: It's now possible to exclude
	  compilation of dynamic loaded libraries commenting the JIM_DYNLIB
	  define from the first lines of jim.c.

2005-03-12 07:43  antirez

	* ChangeLog, jim.c: Modified Jim_Free() to be more strict, now it
	  panics if the refcount of the object is not exactly 0.  Now new
	  objects that are not used may be freed using Jim_Free instead to
	  use Jim_IncrRefCount() + Jim_DecrRefCount() calls.

2005-03-11 23:00  antirez

	* ChangeLog, jim.c: Converted some free() call to Jim_Free().
	  Actually Jim_Free is a macro that just expands to free for now,
	  but in the future Jim may include a specialized allocator for
	  better performances.

2005-03-11 10:37  antirez

	* ChangeLog, jim.c: [lambda] modified to be 'statics' capable.

2005-03-11 10:33  antirez

	* ChangeLog, Makefile: default Makefile optimization level set to
	  -O2 again.  I committed a Makefile with -Os for an error. (me)

2005-03-11 10:31  antirez

	* ChangeLog, jim.c, test.tcl: Fix about [rename] against procedures
	  with statics.  Added a regression test to test.tcl (I plan to
	  move everything inside regtest.tcl into test.tcl).

2005-03-11 10:25  antirez

	* ChangeLog, jim.c: more static fixes (me)

2005-03-11 09:43  antirez

	* jim.c: tons of static var fixes...

2005-03-11 08:21  antirez

	* ChangeLog, jim.c, jim.h: static variables support

2005-03-10 16:58  antirez

	* ChangeLog, jim.c, jim.h, test.tcl: lrange command (me)

2005-03-10 11:03  antirez
